--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -41,6 +41,7 @@
     <string name="menu_applications">إختر التطبيقات التي تود تمكينها</string>
     <string name="menu_accounts">إختر الحسابات التي تود تمكينها</string>
     <string name="menu_contacts">إختر الأسماء التي تود تمكينها</string>
+    <string name="menu_whitelists">Manage whitelists</string>
     <string name="menu_tutorial">تعليمي</string>
     <string name="menu_exclude">إستبعاد</string>
     <string name="menu_close">إغلاق</string>
@@ -53,6 +54,7 @@
     <string name="msg_applied">تم تطبيق القالب</string>
     <string name="msg_saved_to" formatted="false">حُفِظت في  %s</string>
     <string name="msg_no_restrictions">لا توجد قيود</string>
+    <string name="msg_no_whitelists">No whitelists found for this application</string>
     <string name="msg_sure">هل أنت متأكد ؟</string>
     <string name="msg_select">فضلاَ إختر بعض التطبيقات</string>
     <string name="msg_limit">الرجاء إختر تطبيقات أقل من %d </string>
@@ -98,6 +100,7 @@
     <string name="restrict_view">تصفح (المتصفح)</string>
     <string name="title_categories">الفئات</string>
     <string name="title_restrict">إختر للتقيد:</string>
+    <string name="title_check_whitelist">Check to allow</string>
     <string name="title_fused">التصفية حسب استخدام البيانات</string>
     <string name="title_finternet">التصفية حسب الوصول للإنترنت</string>
     <string name="title_fpermission">التصفية حسب الأُذونات</string>
@@ -118,6 +121,7 @@
     <string name="title_parameters">مدخلات:</string>
     <string name="title_applycat">تطبيق على الفئة بأكملها</string>
     <string name="title_once">مرة واحدة ل %1$s ثانية</string>
+    <string name="title_whitelist">Whitelist \'%s\'</string>
     <string name="title_allow">تمكين</string>
     <string name="title_deny">منع</string>
     <string name="title_pleasesubmit">الرجاء إرسال القيود لمساعدة الآخرين</string>
