--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -41,6 +41,7 @@
     <string name="menu_accounts">Выберите разрешенные учетные записи</string>
     <string name="menu_applications">Выберите разрешенные приложения</string>
     <string name="menu_contacts">Выберите разрешенные контакты</string>
+    <string name="menu_whitelists">Manage whitelists</string>
     <string name="menu_tutorial">Обучение</string>
     <string name="menu_exclude">Exclude</string>
     <string name="menu_close">Close</string>
@@ -53,6 +54,7 @@
     <string name="msg_applied">Шаблон применен</string>
     <string name="msg_saved_to" formatted="false">Сохранено в %s</string>
     <string name="msg_no_restrictions">Не найдено разрешений</string>
+    <string name="msg_no_whitelists">No whitelists found for this application</string>
     <string name="msg_sure">Вы уверены?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
@@ -98,6 +100,7 @@
     <string name="restrict_view">Просмотр (браузер)</string>
     <string name="title_categories">Категории</string>
     <string name="title_restrict">Отметьте для запрета:</string>
+    <string name="title_check_whitelist">Check to allow</string>
     <string name="title_fused">использовавшие данные</string>
     <string name="title_finternet">с доступом к Интернету</string>
     <string name="title_fpermission">с разрешениями</string>
@@ -118,6 +121,7 @@
     <string name="title_parameters">Parameters:</string>
     <string name="title_applycat">Apply to entire category</string>
     <string name="title_once">Once for %1$s seconds</string>
+    <string name="title_whitelist">Whitelist \'%s\'</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
