--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -41,6 +41,7 @@
     <string name="menu_accounts">Povolené účty</string>
     <string name="menu_applications">Povolené aplikácie</string>
     <string name="menu_contacts">Povolené kontakty</string>
+    <string name="menu_whitelists">Manage whitelists</string>
     <string name="menu_tutorial">Príručka</string>
     <string name="menu_exclude">Vylúčiť</string>
     <string name="menu_close">Zavrieť</string>
@@ -53,6 +54,7 @@
     <string name="msg_applied">Šablóny bola aplikovaná</string>
     <string name="msg_saved_to" formatted="false">Uložené do %s</string>
     <string name="msg_no_restrictions">Nenájdené žiadne obmedzenia</string>
+    <string name="msg_no_whitelists">No whitelists found for this application</string>
     <string name="msg_sure">Ste si istý?</string>
     <string name="msg_select">Vyberte prosím nejaké aplikácie</string>
     <string name="msg_limit">Vyberte prosím menej než %d aplikácií</string>
@@ -98,6 +100,7 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="restrict_view">Zobrazenie (prehliadač)</string>
     <string name="title_categories">Kategórie</string>
     <string name="title_restrict">Zaškrtnite pre obmedzenie:</string>
+    <string name="title_check_whitelist">Check to allow</string>
     <string name="title_fused">Filter na využitie dát</string>
     <string name="title_finternet">Filter na prístup k internetu</string>
     <string name="title_fpermission">Filter na povolenie</string>
@@ -118,6 +121,7 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="title_parameters">Parametre:</string>
     <string name="title_applycat">Aplikovať na celú kategóriu</string>
     <string name="title_once">Raz za %1$s sekúnd</string>
+    <string name="title_whitelist">Whitelist \'%s\'</string>
     <string name="title_allow">Povoliť</string>
     <string name="title_deny">Odmietnuť</string>
     <string name="title_pleasesubmit">Odošlite prosím vaše obmedzenia na pomoc ostatným</string>
