--- a/res/values-tl-rPH/strings.xml
+++ b/res/values-tl-rPH/strings.xml
@@ -41,6 +41,7 @@
     <string name="menu_accounts">Piliin ang mga Accounts na may pahintulot</string>
     <string name="menu_applications">Piliin ang mga Applications na may pahintulot</string>
     <string name="menu_contacts">Piliin ang mga Contacts na may pahintulot</string>
+    <string name="menu_whitelists">Manage whitelists</string>
     <string name="menu_tutorial">Sangguni</string>
     <string name="menu_exclude">Exclude</string>
     <string name="menu_close">Close</string>
@@ -53,6 +54,7 @@
     <string name="msg_applied">Nakahandang paghihigpit ay ngayon na nakatakda</string>
     <string name="msg_saved_to" formatted="false">Nailagay sa %s</string>
     <string name="msg_no_restrictions">Walang nakatakdang paghihigpit na natagpuan</string>
+    <string name="msg_no_whitelists">No whitelists found for this application</string>
     <string name="msg_sure">Tiyak ka na ba?</string>
     <string name="msg_select">Mamili po muna sa iyong mga applications na ibibilang</string>
     <string name="msg_limit">Mamili lang po ng mas kaunti sa %d na applications</string>
@@ -98,6 +100,7 @@
     <string name="restrict_view">Pahintulot sa Pagpapakita (ng Browser)</string>
     <string name="title_categories">Mga Pangkat</string>
     <string name="title_restrict">Lagyan ng Check para pahigpitan:</string>
+    <string name="title_check_whitelist">Check to allow</string>
     <string name="title_fused">Bigyan ng Filter at ipakita lamang sa mga Kaalaman na Nagamit</string>
     <string name="title_finternet">Bigyan ng Filter at ipakita lamang sa Pagdaan ng Internet</string>
     <string name="title_fpermission">Bigyan ng Filter at ipakita lamang sa mga may Pahintulot</string>
@@ -118,6 +121,7 @@
     <string name="title_parameters">Parameters:</string>
     <string name="title_applycat">Apply to entire category</string>
     <string name="title_once">Once for %1$s seconds</string>
+    <string name="title_whitelist">Whitelist \'%s\'</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
