--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -41,6 +41,7 @@
     <string name="menu_accounts">Chọn tài khoản cho phép</string>
     <string name="menu_applications">Chọn ứng dụng để cấp phép</string>
     <string name="menu_contacts">Chọn liên lạc cho phép</string>
+    <string name="menu_whitelists">Manage whitelists</string>
     <string name="menu_tutorial">Hướng dẫn</string>
     <string name="menu_exclude">Exclude</string>
     <string name="menu_close">Close</string>
@@ -53,6 +54,7 @@
     <string name="msg_applied">Thiết lập mẫu đã được áp dụng</string>
     <string name="msg_saved_to" formatted="false">Đã được lưu vào %s</string>
     <string name="msg_no_restrictions">Không có thông tin hạn chế nào được tìm thấy</string>
+    <string name="msg_no_whitelists">No whitelists found for this application</string>
     <string name="msg_sure">Bạn có chắc không?</string>
     <string name="msg_select">Vui lòng chọn một vài ứng dụng</string>
     <string name="msg_limit">Vui lòng chọn ít hơn %d ứng dụng</string>
@@ -97,6 +99,7 @@
     <string name="restrict_view">Mở trình duyệt</string>
     <string name="title_categories">Danh mục</string>
     <string name="title_restrict">Đánh dấu để hạn chế:</string>
+    <string name="title_check_whitelist">Check to allow</string>
     <string name="title_fused">Lọc theo sử dụng dữ liệu</string>
     <string name="title_finternet">Lọc theo truy cập internet</string>
     <string name="title_fpermission">Lọc theo quyền</string>
@@ -117,6 +120,7 @@
     <string name="title_parameters">Parameters:</string>
     <string name="title_applycat">Apply to entire category</string>
     <string name="title_once">Once for %1$s seconds</string>
+    <string name="title_whitelist">Whitelist \'%s\'</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
