--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -97,6 +97,11 @@
     <string name="restrict_shell">سطر الأوامر (الأوامر,المستخدم الجذر)</string>
     <string name="restrict_system">النظام (البرامج المنزلة)</string>
     <string name="restrict_view">تصفح (المتصفح)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">الفئات</string>
     <string name="title_restrict">إختر للتقيد:</string>
     <string name="title_check_whitelist">Check to allow</string>
