--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -97,6 +97,11 @@
     <string name="restrict_shell">Терминал (команди, суперпотребител)</string>
     <string name="restrict_system">Система (инсталирани приложения)</string>
     <string name="restrict_view">Преглед (браузър)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Отбележи за ограничаване:</string>
     <string name="title_check_whitelist">Check to allow</string>
