--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -95,6 +95,11 @@
     <string name="restrict_shell">Intèrpret d\'ordres (ordres, superusuari)</string>
     <string name="restrict_system">Sistema (aplicacions instal·lades)</string>
     <string name="restrict_view">Vista (navegador)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Activa per a restringir:</string>
     <string name="title_check_whitelist">Check to allow</string>
