--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -97,6 +97,11 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="restrict_shell">Konzole (příkazy, superuser)</string>
     <string name="restrict_system">Systém (nainstalované aplikace)</string>
     <string name="restrict_view">Zobrazení (v prohlížeči)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Kategorie</string>
     <string name="title_restrict">Zaškrtněte pro omezení:</string>
     <string name="title_check_whitelist">Check to allow</string>
