--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -95,6 +95,11 @@
     <string name="restrict_shell">Shell (kommandoer, superbruger)</string>
     <string name="restrict_system">System (installerede apps)</string>
     <string name="restrict_view">Vis (browser)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Markér for at blokere:</string>
     <string name="title_check_whitelist">Check to allow</string>
