--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -97,6 +97,11 @@ kuid on võimatu garanteerida, et see töötab igal seadmel ja iga rakendusega.
     <string name="restrict_shell">Käsurida (käsud, juurkasutaja)</string>
     <string name="restrict_system">Süsteem (installeeritud rakendused)</string>
     <string name="restrict_view">Vaade (brauser)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Lisa linnuke, et keelata:</string>
     <string name="title_check_whitelist">Check to allow</string>
