--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -97,6 +97,11 @@
     <string name="restrict_shell">Shell (εντολές, superuser)</string>
     <string name="restrict_system">Σύστημα (εγκατεστημένες εφαρμογές)</string>
     <string name="restrict_view">Εμφάνιση (browser)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
     <string name="title_check_whitelist">Check to allow</string>
