--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -99,6 +99,11 @@
     <string name="restrict_shell">شل (فرامین، ابر کاربر)</string>
     <string name="restrict_system">سیستم (نرم افزارهای نصب شده)</string>
     <string name="restrict_view">نما (مرورگر)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">برای محدود شدن انتخاب کنید:</string>
     <string name="title_check_whitelist">Check to allow</string>
