--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -97,6 +97,11 @@ ma è impossibile garantire che funzionerà in modo impeccabile su ogni disposit
     <string name="restrict_shell">Shell (comandi, superuser)</string>
     <string name="restrict_system">Sistema (applicazioni installate)</string>
     <string name="restrict_view">Visualizzazione (browser)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categorie</string>
     <string name="title_restrict">Spunta per limitare:</string>
     <string name="title_check_whitelist">Check to allow</string>
