--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -97,6 +97,11 @@
     <string name="restrict_shell">シェル (コマンド, Superuser)</string>
     <string name="restrict_system">システム (インストール済みアプリ)</string>
     <string name="restrict_view">表示 (ブラウザ)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">カテゴリー</string>
     <string name="title_restrict">チェックで制限:</string>
     <string name="title_check_whitelist">Check to allow</string>
