--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -97,6 +97,11 @@ namun ia adalah mustahil untuk menjaminkan penggunaan sempurna untuk setiap pera
     <string name="restrict_shell" tools:ignore="UnusedResources">Cengkerang (arahan, pengguna berkuasa)</string>
     <string name="restrict_system" tools:ignore="UnusedResources">Sistem (aplikasi yang dipasangkan)</string>
     <string name="restrict_view" tools:ignore="UnusedResources">Tinjauan (pelayar)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories" tools:ignore="UnusedResources">Kategori</string>
     <string name="title_restrict">Tanda untuk sekat:</string>
     <string name="title_check_whitelist">Check to allow</string>
