--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -97,6 +97,11 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="restrict_shell">Shell (opdrachten, superuser)</string>
     <string name="restrict_system">Systeem (geïnstalleerde apps)</string>
     <string name="restrict_view">Tonen (browser)</string>
+    <string name="whitelist_ipaddress">IP adressen</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">Bestandsnamen</string>
+    <string name="whitelist_command">Shell commando\'s</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categorieën</string>
     <string name="title_restrict">Vink aan om te beperken:</string>
     <string name="title_check_whitelist">Check to allow</string>
