--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -97,6 +97,11 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="restrict_shell">Shell (linha de comandos, superuser)</string>
     <string name="restrict_system">Sistema (aplicações instaladas)</string>
     <string name="restrict_view">Ver (navegador)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Clique para restringir:</string>
     <string name="title_check_whitelist">Check to allow</string>
