--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -97,6 +97,11 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_shell">Interfata (Shell) (comenzi, superuser)</string>
     <string name="restrict_system">Sistem (aplicatii instalate)</string>
     <string name="restrict_view">Acces browser</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Bifeaza pentru a restrictiona:</string>
     <string name="title_check_whitelist">Check to allow</string>
