--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -97,6 +97,11 @@
     <string name="restrict_shell">Команды shell (вкл. суперпользователя)</string>
     <string name="restrict_system">Система (установленные приложения)</string>
     <string name="restrict_view">Просмотр (браузер)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Категории</string>
     <string name="title_restrict">Отметьте для запрета:</string>
     <string name="title_check_whitelist">Check to allow</string>
