--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -97,6 +97,11 @@
     <string name="restrict_shell">Lupina (ukazi, superuser)</string>
     <string name="restrict_system">Sistem (nameščeni programi)</string>
     <string name="restrict_view">Pogled (brskalnik)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Kategorije</string>
     <string name="title_restrict">Označi za omejitev pravic:</string>
     <string name="title_check_whitelist">Check to allow</string>
