--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -97,6 +97,11 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="restrict_shell">Shell (kommandon, superuser)</string>
     <string name="restrict_system">System (installerade appar)</string>
     <string name="restrict_view">View (webbläsare)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Categories</string>
     <string name="title_restrict">Markera för att blockera:</string>
     <string name="title_check_whitelist">Check to allow</string>
