--- a/res/values-tl-rPH/strings.xml
+++ b/res/values-tl-rPH/strings.xml
@@ -97,6 +97,11 @@
     <string name="restrict_shell">Sa Shell (commands, superuser)</string>
     <string name="restrict_system">Sa System (ukol sa nailagay mong Apps)</string>
     <string name="restrict_view">Pahintulot sa Pagpapakita (ng Browser)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Mga Pangkat</string>
     <string name="title_restrict">Lagyan ng Check para pahigpitan:</string>
     <string name="title_check_whitelist">Check to allow</string>
