--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -97,6 +97,11 @@
     <string name="restrict_shell">Команди shell (вкл. суперкористувача)</string>
     <string name="restrict_system">Система (встановлені програми)</string>
     <string name="restrict_view">Перегляд (браузер)</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Категорії</string>
     <string name="title_restrict">Позначте для заборони:</string>
     <string name="title_check_whitelist">Check to allow</string>
