--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -96,6 +96,11 @@
     <string name="restrict_shell">Shell (câu lệnh, superuser)</string>
     <string name="restrict_system">Hệ thống (các ứng dụng)</string>
     <string name="restrict_view">Mở trình duyệt</string>
+    <string name="whitelist_ipaddress">IP addresses</string>
+    <string name="whitelist_library">Native libraries</string>
+    <string name="whitelist_filename">File names</string>
+    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_url">URLs</string>
     <string name="title_categories">Danh mục</string>
     <string name="title_restrict">Đánh dấu để hạn chế:</string>
     <string name="title_check_whitelist">Check to allow</string>
